Add alert API and pop menu
