# src/main/webui/openapi.json
@@ -307,17 +307,6 @@
     }
   },
   "paths" : {
-    "/api/admin/alert/new" : {
-      "post" : {
-        "responses" : {
-          "201" : {
-            "description" : "Created"
-          }
-        },
-        "summary" : "Create Alert",
-        "tags" : [ "Admin Resource" ]
-      }
-    },
     "/api/admin/batch/all" : {
       "get" : {
         "responses" : {
@@ -488,7 +477,7 @@
                 "schema" : {
                   "type" : "array",
                   "items" : {
-                    "$ref" : "#/components/schemas/QuoteDTO"
+                    "$ref" : "#/components/schemas/ProductInfo"
                   }
                 }
               }
@@ -502,6 +491,12 @@
     "/api/product/all" : {
       "get" : {
         "parameters" : [ {
+          "name" : "keyword",
+          "in" : "query",
+          "schema" : {
+            "type" : "string"
+          }
+        }, {
           "name" : "page",
           "in" : "query",
           "schema" : {
@@ -731,6 +726,41 @@
           }
         },
         "summary" : "Get Product By Id",
+        "tags" : [ "Product Resource" ]
+      }
+    },
+    "/api/product/{productId}/createAlert" : {
+      "post" : {
+        "parameters" : [ {
+          "name" : "productId",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "type" : "integer",
+            "format" : "int64"
+          }
+        } ],
+        "requestBody" : {
+          "content" : {
+            "application/json" : {
+              "schema" : {
+                "type" : "number"
+              }
+            }
+          },
+          "required" : true
+        },
+        "responses" : {
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "application/json" : {
+                "schema" : { }
+              }
+            }
+          }
+        },
+        "summary" : "Create Alert",
         "tags" : [ "Product Resource" ]
       }
     },
